tests/NormalTests/paczka1/fuzzy1/21487393.err
Error in line 5: A6O9oT5ur S202 9,50
Error in line 6: A6O9oT5ur S202 3,55
Error in line 9: cUU58Xx S786 96,7
Error in line 14: Lu72 A686 11,6
Error in line 15: Lu72 S786 21,5
Error in line 18: A686 S534 66,3
Error in line 20: cUU5T8Xx S786 102,5
Error in line 25: 6Bj8iKJZDTF A686 95,7
Error in line 21: A686 S202 22,0
Error in line 32: kGENeA A686 86,4
